# YourAiWorkforce

./: .env.example  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
agents/: QUICKSTART.md  README.md  orchestrator.md
agents/_common/: conversational-protocol.md
agents/phase-0/: 01-product-discovery.md  02-system-architect.md  03-domain-expert-generator.md
agents/phase-1/: 04-backend-developer.md  04-data-engineer.md  05-backend-developer.md  05-data-engineer.md  06-devops-engineer.md  09-devops-engineer.md
agents/phase-2/: 06-frontend-developer.md  07-backend-developer.md  07-frontend-developer.md  08-backend-developer.md  08-data-engineer.md  09-data-engineer.md  10-qa-lead.md
agents/phase-3/: 11-algorithm-engineer.md  12-frontend-developer.md  13-data-engineer.md
agents/phase-4/: 14-frontend-developer.md  15-security-compliance.md  16-technical-writer.md  17-qa-lead.md
agents/phase-5/: 18-domain-expert-review.md  19-qa-final.md
agents/phase-6/: 20-technical-writer.md  21-devops-engineer.md  22-project-manager.md
docs/: engineering-notes.md
docs/metrics/: README.md
docs/plan/: model-use.md
docs/samples/: README.md
docs/todo/: subagent-isolation-plan.md
gateway/: .gitignore  README.md  go.mod  main.go  middleware.go
gateway/static/: index.html
scripts/: eval_check_done.py  metrics_report.py
src/: agent.py  edges.py  main.py  model.py  schemas.py  state.py  tools.py
src/config/: __init__.py
templates/: architecture.md  domain-knowledge.md  prd.md  review-report.md
(+18 files in other folders)
