[project]
name = "agentscompany"
version = "0.1.0"
description = "A local-8B multi-agent planning pipeline, clamped for reliability and squeezed for cost — runs entirely on a 16GB machine at zero API cost."
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "fastapi>=0.135.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain>=1.2.12",
    "langchain-core>=1.3.0",
    "langchain-ollama>=1.0.1",
    "aiosqlite>=0.20.0",
    "langgraph==1.1.9",
    "langgraph-api>=0.8.1",
    "langgraph-checkpoint>=4.0.2",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-cli[inmem]>=0.4.24",
    "langgraph-prebuilt>=1.0.11",
    "langgraph-sdk>=0.3.13",
    "langsmith==0.7.17",
    "orjson==3.11.7",
    "ormsgpack==1.12.2",
    "packaging==26.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "tenacity==9.1.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn>=0.42.0",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
